Add meta to bypass cors.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Scott Alton | Developer</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
